Fix preview overflow

--- a/app/scss/components/_preview.scss
+++ b/app/scss/components/_preview.scss
@@ -5,6 +5,8 @@
 .preview {
 
     .rendered {
+        height: inherit;
+        overflow-y: scroll;
         padding: 10px;
     }
 
